overflow fixed

--- a/VPShare-frontend/src/styles/index.css
+++ b/VPShare-frontend/src/styles/index.css
@@ -25,7 +25,6 @@
 }
 
 html, body {
-  overflow-x: hidden;
   width: 100%;
   max-width: 100vw;
 }
